Replace Logo In Header Section

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>LabTech Elections 2025 - University of Cape Coast</title>
+    <title>LabTech E-Center 2025 - University of Cape Coast</title>
     <meta name="description" content="Laboratory Technology Department Elections 2025 at University of Cape Coast. Secure online voting platform for departmental governance." />
     <meta name="keywords" content="Laboratory Technology, UCC, Elections, Voting, University of Cape Coast, Ghana" />
     <link rel="icon" type="image/png" href="/favicon.png" />
